moved state api to activity-updated tests